# ePIC_mcc

./: CMakeLists.txt  Doxyfile  README.md  cs.py
cross_section/: Ar_cs.cpp  Ar_cs.h  cs.py  hydrogen_cs.cpp  hydrogen_cs.h
include/: collision.h  domain.h  emitter.h  field.h  iniparser.h  init.h  output.h  species.h
inputfiles/: discharge.ini  input.ini  input1.ini  input_3comp.ini  input_discharge.ini  input_epw.ini  input_harmonics.ini  input_negbeam.ini  input_negion_harmonics.ini
python_scripts/: 1.py  2.py  E_den_vs_vp.py  Ek_powerplot.py  Resonance.py  alpha_vs_velocity_fixed_pressure.py  avg_coll_freq_plot.py  coll_freq.py  combined_distribution.py  contour.py  contour_xv.py  contour_xvt.py  density.py  diffusion_Ek.py  diffusion_analysis_hdf.py  diffusion_local.py  diffusion_theory.py  diffusion_vel.py  dispersion.py  distribution_animate.py  energy_compare.py  energy_plot.py  entropy.py  fv_Ek2.py  hermite_test.py  intermittency.py  intermittency_vel.py  kubo_csv.py  kubo_distribution.py  kubo_ensemble_new.py  kubo_local.py  kubo_number.py  modes.py  modes_new.py  particle_trajectory.py  particle_trajectory_kubo.py  phase_distri.py  phaseplot_species.py  potential_energy.py  power_law_fit.py  (+12 more)
python_scripts/extra/: combined_distribution.py  contour_2s.py  dispersion-combined.py  growthratefind.py  phasespace_compare.py  plot_dispersion.py  potential_energy_compare2.py  velmesh_plot.py
src/: collision.cpp  domain.cpp  emitter.cpp  field.cpp  iniparser.cpp  init.cpp  main.cpp  output.cpp  species.cpp
tests/: test_solvers.cpp
